--- a/rings.html
+++ b/rings.html
@@ -17,33 +17,33 @@ ring {
 	border-radius: 50%;
 	background-color: transparent;
 }
-div>ring {
+#love-work>ring {
 	position: absolute;
 }
-div>ring.left, div>ring.left ring {
+#love-work>ring.left, #love-work>ring.left ring {
 	border-color: red;
 }
-div>ring.right, div>ring.right ring {
+#love-work>ring.right, #love-work>ring.right ring {
 	border-color: blue;
 }
-body.paused>div>ring {
+.paused #love-work {
 	display: none;
 }
-body>div>label {
+#love-word {
   position: absolute;
-  margin-top: -0.6em;
-  font-size: 96pt;
-  font-size: 50vh;
   text-align: center;
   z-index: 10;
-  top: 50%;
   left: 0px;
   width: 100%;
   text-stroke: 2px white;
+  white-space: pre;
   -moz-text-stroke: 2px white;
   -webkit-text-stroke: 2px white;
   -o-text-stroke: 2px white;
   -ms-text-stroke: 2px white;
+  border: none 0px;
+  outline: none 0px;
+  background-color: transparent;
 }
 </style><script>
 window.addEventListener( 'load', function() {
@@ -76,7 +76,7 @@ window.addEventListener( 'load', function() {
         : ('rgba(' + Math.round(r * 255) + ',' + Math.round(g * 255) + ',' + Math.round(b * 255) + ',' + a + ')')
     },
     work = body.appendChild( document.createElement( 'div' ) ),
-    love = work.appendChild( document.createElement( 'label' ) ),
+    love = work.appendChild( document.createElement( 'div' ) ),
     list = [],
     hue = 0,
     lit = 0.25,
@@ -84,11 +84,33 @@ window.addEventListener( 'load', function() {
     ym = window.innerHeight,
     xh = xm / 2,
     yh = ym / 2,
-    n = Math.max(xh, yh),
     tmpl = document.createElement( 'ring' ),
+    wordTop = 0,
+    wordSize = 24,
+    dirty = 2,
+    resize = function () {
+      var h = love.offsetHeight,
+        p = love.textContent.trim().split( "\n" ),
+        c = p.reduce( function(a,b) { return (a < b.length) ? b.length : a }, 0 ),
+        r = p.length;
+      if ( dirty ) dirty--;
+      xm = window.innerWidth;
+      ym = window.innerHeight;
+      xh = xm / 2;
+      yh = ym / 2;
+      wordSize = Math.min( ym * 1 / r, xm * 1.6 / c );
+      work.style.fontSize = wordSize + 'px';
+      wordTop = (ym - h) / 2;
+    },
+    n = Math.max(xh, yh),
     t = tmpl;
-  love.textContent = 'LOVE';
-	while ( n-- ) t = t.appendChild( tmpl.cloneNode() );
+  work.id = 'love-work';
+  love.id = 'love-word';
+  love.textContent = decodeURIComponent(location.search.slice( 1 ) || 'LOVE');
+  love.setAttribute('contentEditable', true);
+	//love.setAttribute('type', 'text');
+	while ( n-- )
+    t = t.appendChild( tmpl.cloneNode() );
 	n = classNames.length;
 	while (n--) {
 		list[n] = {
@@ -103,16 +125,21 @@ window.addEventListener( 'load', function() {
     t.classList.add( classNames[n] );
 	}
 	setInterval( function () {
-		var i = list.length,
-			e, n, a, x, y;
+		var i, e, n, a, x, y;
+    if ( dirty )
+      resize();
+    i = list.length;
 		while ( i-- ) {
 			n = (e = list[i]).el;
 			n.style.cssText = 'left:' + (xh - n.offsetWidth / 2 + (x = e.px + sin( a = (e.pa += e.pd) ) * (d = (e.dd += e.ds)))) + 'px; top: ' + (yh - n.offsetHeight / 2 + (y = e.py + cos( a ) * d)) + 'px;';
-      love.style.cssText = 'color:hsla(' + (hue = (hue + 10) % 360) + ', 100%, 25%, 0.6)';
 			if ( x < -xh || x >= xh || y < -yh || y >= yh )
 				e.ds = -e.ds;
 		}
+    love.style.cssText = 'color:hsla(' + (hue = (hue + 10) % 360) + ', 100%, 25%, 0.6);top:' + wordTop + 'px';
 	}, 100 );
 	body.classList.remove( 'paused' );
+  love.addEventListener('keyup', resize);
+  love.addEventListener('blur', resize);
+  window.addEventListener('resize', resize);
 } )
 </script></head><body class="paused"></body></html>
