--- a/rings.html
+++ b/rings.html
@@ -19,6 +19,7 @@ ring {
 }
 #love-work>ring {
 	position: absolute;
+  -webkit-transition: left,top 200ms;
 }
 #love-work>ring.left, #love-work>ring.left ring {
 	border-color: red;
@@ -44,6 +45,7 @@ ring {
   border: none 0px;
   outline: none 0px;
   background-color: transparent;
+  -webkit-transition: left,top 2s;
 }
 </style><script>
 window.addEventListener( 'load', function() {
