oops missed a key

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><title>Erich's PortfolioM/title></head><body>
+<html><head><title>Erich's Portfolio</title></head><body>
 <h1>Coming soon!</h1>
 <a href="http://laughingsun.github.io/proj/regexhelper/docs/index.html">In the mean time check out the regexhelper api docs</a>
 </body></html>
