--- a/xhr2-image.html
+++ b/xhr2-image.html
@@ -61,7 +61,7 @@ xhr.onloadend = function ( ) {
 };
 xhr.send( null );
 
-var imgurl = realpath( 'images/test-pattern-400x400y.jpg' );
+var imgurl = realpath( 'test-pattern-400x400y.jpg' );
 var ctx = document.getElementById('cnv').getContext('2d');
 var img = document.getElementById('img');
 var xhr2 = new XMLHttpRequest();
