--- a/xhr2-image.html
+++ b/xhr2-image.html
@@ -32,7 +32,7 @@ body {
       <div>
         <pre id="http-log"></pre>
       </div>
-      <div class="outer container"><div class="sidebyside container"><div id="cnv-container" class="container"><canvas id="cnv" width="400" height="400"></canvas></div><div id="cnv-label" class="container">canvas time ?</div></div><div class="sidebyside container"><div id="img-container" class="container" title="The time it took canvas context.draw() to paint the image"><img id="img" /></div><div id="img-label" class="container" title="The time it took the <img/> tag to render the image">image time ?</div></div><div id="xhr-label" class="container" title="The time it took to download the image">XMLHttpRequest time ?</div></div>
+      <div class="outer container"><div class="sidebyside container"><div id="cnv-container" class="container"><canvas id="cnv" width="400" height="400"></canvas></div><div id="cnv-label" class="container">canvas time ?</div></div><div class="sidebyside container"><div id="img-container" class="container"><img id="img" /></div><div id="img-label" class="container" title="The time it took the &lt;img/&gt; tag to render the image">image time ?</div></div><div id="xhr-label" class="container" title="The time it took to download the image">XMLHttpRequest time ?</div></div>
       <div>
         <pre id="xhr-log"></pre>
       </div>
