Fixed title tag content misspelling

--- a/dobin/index.html
+++ b/dobin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Dough Binary</title>
+  <title>Dough Binary - Birthday dough-nots and dough-ones</title>
   <meta name="description" content="Dough Binary">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
   <style>
